--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,4 +8,4 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - run: echo "Hello World!"
+      - run: npm i
