--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,3 +10,5 @@ jobs:
           node-version: '20'
       - run: npm i
       - run: npm run deploy
+        env:
+            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
