--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,11 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: fregante/setup-git-user@v2
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
       - run: npm i
+      - run: git config user.name "${GITHUB_ACTOR}"
+      - run: git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
       - run: npm run deploy
         env:
             GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
