--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,8 +11,6 @@ jobs:
         with:
           node-version: '20'
       - run: npm i
-      - run: git config user.name "${GITHUB_ACTOR}"
-      - run: git config user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
-      - run: npm run deploy
+      - run: npm run deploy -- --user "Rishav Rout <rout.rishav@gmail.com>"
         env:
             GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
