--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,6 @@ jobs:
         with:
           node-version: '20'
       - run: npm i
-      - run: npm run deploy -- --user "Rishav Rout <rout.rishav@gmail.com>"
+      - run: npm run deploy"
         env:
             GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
