--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,17 +1,20 @@
-name: release
+name: Build and Deploy
 on: [push]
 permissions:
   contents: write
-  id-token: write
 jobs:
-  new-release:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout 🛎️
+        uses: actions/checkout@v4
+
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: |
+          npm ci
+          npm run build
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          node-version: '20'
-      - run: npm i
-      - run: npm run deploy
-        env:
-            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          folder: build # The folder the action should deploy.
