--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/node": "^14.11.2",
     "gh-pages": "^6.1.1",
     "gts": "^3.1.1",
