--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/react-dom": "^18.2.25",
     "axios": "^1.6.8",
     "downloadjs": "^1.4.7",
+    "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -61,6 +63,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^14.11.2",
     "gh-pages": "^6.1.1",
     "gts": "^3.1.1",
