--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
     "jszip": "^3.10.1",
+    "konva": "^9.3.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.10",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -65,7 +67,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/downloadjs": "~1.4.6",
     "@types/file-saver": "^2.0.7",
+    "@types/gh-pages": "~6.1.0",
     "@types/node": "^14.11.2",
     "gh-pages": "^6.1.1",
     "gts": "^3.1.1",
