--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mui/material": "^6.0.1",
     "@tanstack/react-query": "^5.37.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.96",
@@ -37,7 +37,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "gts lint",
     "clean": "gts clean",
@@ -73,6 +73,11 @@
     "@types/node": "^14.11.2",
     "gh-pages": "^6.1.1",
     "gts": "^3.1.1",
+    "jest-canvas-mock": "^2.5.2",
+    "jest-environment-jsdom": "^29.7.0",
+    "react-test-renderer": "^18.3.1",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "~4.7.0"
   }
 }
