--- a/.github/workflows/monthly-sender.yaml
+++ b/.github/workflows/monthly-sender.yaml
@@ -16,10 +16,15 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install Chrome and Chrome Driver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y chromium-browser chromium-chromedriver
+
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pillow pyyaml
+          pip install selenium pyyaml
 
       - name: Create config file
         env:
