--- a/.github/workflows/monthly-sender.yaml
+++ b/.github/workflows/monthly-sender.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install Chrome
         run: |
-          sudo mkdir -p /etc/sources.list.d/google.list/
+          sudo mkdir -p /etc/sources.list.d/
           wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
           sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/sources.list.d/google.list'
           sudo apt-get update
