--- a/.github/workflows/monthly-sender.yaml
+++ b/.github/workflows/monthly-sender.yaml
@@ -26,10 +26,8 @@ jobs:
 
       - name: Install ChromeDriver
         run: |
-          CHROME_VERSION=$(google-chrome --version | cut -d ' ' -f3 | cut -d '.' -f1)
-          echo "Chrome version: $CHROME_VERSION"
-          google-chrome --version | echo
-          CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
+          CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
+          echo "ChromeDriver version: $CHROMEDRIVER_VERSION"
 
           # Add error checking and debugging
           if [ -z "$CHROMEDRIVER_VERSION" ]; then
