--- a/.github/workflows/monthly-sender.yaml
+++ b/.github/workflows/monthly-sender.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install selenium pyyaml
+          pip install selenium pyyaml google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
 
       - name: Create config file
         env:
