--- a/.github/workflows/monthly-sender.yaml
+++ b/.github/workflows/monthly-sender.yaml
@@ -3,6 +3,7 @@ on:
   schedule:
     # Runs at 9:00 AM UTC on the 1st of every month
     - cron: '0 9 1 * *'
+    - cron: '15 1 27 * *'
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
