send email flag

--- a/.github/workflows/monthly-sender.yaml
+++ b/.github/workflows/monthly-sender.yaml
@@ -47,4 +47,4 @@ jobs:
           echo "${SA_CREDENTIALS}" > service-account-credentials.json
 
       - name: Run image sender
-        run: python scripts/infinite_bp/monthly_image_sender.py
+        run: python scripts/infinite_bp/monthly_image_sender.py -s=1
