--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ yarn-error.log*
 scripts/infinite_bp/config.yaml
 scripts/infinite_bp/service-account-credentials.json
 scripts/images_to_send
+
+# Customer Data
+scripts/infinite_bp/*.json
