--- a/.github/workflows/monthly-uploader-only.yaml
+++ b/.github/workflows/monthly-uploader-only.yaml
@@ -45,3 +45,7 @@ jobs:
 
             - name: Run image sender
               run: python scripts/infinite_bp/monthly_image_sender.py -s=0
+
+            - uses: actions/upload-artifact@v4
+              with:
+                  path: email_to_buys.json
