--- a/.github/workflows/monthly-sender.yaml
+++ b/.github/workflows/monthly-sender.yaml
@@ -33,6 +33,7 @@ jobs:
                   SA_CREDENTIALS: ${{ secrets.SA_CREDENTIALS }}
                   LEAGUE_ID_LIST: ${{ secrets.LEAGUE_ID_LIST }}
                   TEAM_ID_LIST: ${{ secrets.TEAM_ID_LIST }}
+                  SKIP_LIST: ${{ secrets.SKIP_LIST }}
               run: |
                   echo "email_list: ${EMAIL_LIST}" > config.yaml
                   echo "smtp_server: ${SMTP_SERVER}" >> config.yaml
@@ -41,6 +42,7 @@ jobs:
                   echo "sender_password: ${SENDER_PASSWORD}" >> config.yaml
                   echo "league_id_list: ${LEAGUE_ID_LIST}" >> config.yaml
                   echo "team_id_list: ${TEAM_ID_LIST}" >> config.yaml
+                  echo "skip_list: ${SKIP_LIST}" >> config.yaml
                   echo "${SA_CREDENTIALS}" > service-account-credentials.json
 
             - name: Run image sender
