--- a/.github/workflows/monthly-sender.yaml
+++ b/.github/workflows/monthly-sender.yaml
@@ -17,6 +17,9 @@ jobs:
                   chrome-version: 133
                   install-chromedriver: true
                   install-dependencies: true
+            - name: Update PATH for chrome
+              run: |
+                  sudo ln -sf /opt/hostedtoolcache/setup-chrome/chromium/stable/x64/chrome /usr/bin/google-chrome
 
             - name: Install Python dependencies
               run: |
