--- a/.github/workflows/monthly-sender.yaml
+++ b/.github/workflows/monthly-sender.yaml
@@ -55,4 +55,6 @@ jobs:
 
             - uses: actions/upload-artifact@v4
               with:
-                  path: email_to_buys.json
+                  path: |
+                      email_to_buys.json
+                      league_id_to_buys.json
