--- a/.github/workflows/monthly-uploader-only.yaml
+++ b/.github/workflows/monthly-uploader-only.yaml
@@ -45,6 +45,7 @@ jobs:
                   echo "sender_password: ${SENDER_PASSWORD}" >> config.yaml
                   echo "league_id_list: ${LEAGUE_ID_LIST}" >> config.yaml
                   echo "team_id_list: ${TEAM_ID_LIST}" >> config.yaml
+                  echo "user_id_list: ${USER_ID_LIST}" >> config.yaml
                   echo "skip_list: ${SKIP_LIST}" >> config.yaml
                   echo "disallowed_buys: ${DISALLOWED_BUYS}" >> config.yaml
                   echo "${SA_CREDENTIALS}" > service-account-credentials.json
