--- a/react-redraft/package.json
+++ b/react-redraft/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.85.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "lz-string": "^1.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.8.1"
