--- a/react-redraft/package.json
+++ b/react-redraft/package.json
@@ -15,9 +15,17 @@
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\""
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/lab": "^7.0.0-beta.17",
+    "@mui/material": "^7.3.2",
     "@tanstack/react-query": "^5.85.5",
+    "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "jszip": "^3.10.1",
     "lz-string": "^1.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -25,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
